<resources>
    <string name="app_name">Allottee Corner</string>
    <string name="action_okay">Ok</string>
    <string name="department_of_higher_education_haryana_the_officialapp" translatable="false"> This is a commitment of the Haryana Shehri Vikas Pradhikaran to provide every allottee/purchaser of its properties:Efficient, prompt and courteous service with dedication, integrity and fairness.</string>
    <string name="department_of_higher_education_haryana" translatable="false"> Department of Higher Education, Haryana</string>

    <string name="checkappstatus">Check Application Status</string>


    <string name="introduction">Introduction</string>
    <string name="ListOfScholarship">List Of Scholarship</string>
    <string name="DepartmentOnBoard">Department On Board</string>
    <string name="SchemeGuideline">Scheme Guideline</string>
    <string name="SalientFeatures">Salient Features</string>


    <string name="howtoapply">How to Apply</string>
    <string name="courselist">Course List</string>


    <string name="title_activity_introduction">IntroductionActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="introductiontext">" Scholarships are offered to deserving and needy students to encourage them to take up Higher education.This incentive falls in line with the motto of Higher Education of the State: Access, Equity and Quality. Generation makes Nation. Therefore the Govt. of India and Govt. of Haryana are always putting their efforts to attract the students towards Higher Education.
        \n\n <font color='#ff4618'>\"Har-Chhatravratti\"</font> is a centralized portal developed by the Department of Higher Education that provides one stop solution for end-to-end scholarship process right from submission of application, verification and disbursal to end beneficiary. Keeping in view the State Government’s commitment to make beneficiary-oriented schemes easily accessible, seamless and transparent, a centralized State Scholarship Portal has been developed by bringing in 10 scholarship schemes of 5 major department of the government under a single platform. \n\n <font color='#ff4618'>\"Har-Chhatravratti\"</font> Portal emerges as one of the most prominent scholarship portal that offers three tier verification of the application. Student Application form got verified from three levels i.e. Institute, University/Nodal Body and Head Office thus ensuring the complete authentication of the applicant. This portal is also integrated with state flagship programme i.e.<font color='#ff4618'>\"Parivar Pehchan Patra (PPP)\"</font>  scheme of Haryana Government. In order to avail the benefits of scholarship schemes of the state government, it is mandatory for each applicant to have Parivar Pehchan Patra (PPP). Har-Chhatravratti portal would also include the<font color='#ff4618'>\"students studying outside Haryana\"</font> . Such application would directly be verified by the concerned department. \n\n योग्य और जरूरतमंद छात्रों को उच्च शिक्षा लेने के लिए प्रोत्साहित करने के लिए छात्रवृत्ति की पेशकश की जाती है। यह प्रोत्साहन राज्य की उच्च शिक्षा के आदर्श वाक्य के अनुरूप है: पहुंच, समानता और गुणवत्ता। पीढ़ी राष्ट्र बनाती है। इसलिए भारत सरकार और हरियाणा सरकार छात्रों को उच्च शिक्षा की ओर आकर्षित करने के लिए हमेशा प्रयास कर रही है। \n\n <font color='#ff4618'>\"हर-छात्रवृत्ति\"</font> उच्चतर शिक्षा विभाग द्वारा विकसित एक केंद्रीकृत पोर्टल है जो आवेदन जमा करने, सत्यापन और अंतिम लाभार्थी को वितरण से लेकर शुरू से अंत तक छात्रवृत्ति प्रक्रिया के लिए एक स्थान पर समाधान प्रदान करता है। लाभार्थी उन्मुख योजनाओं को आसानी से सुलभ, निर्बाध और पारदर्शी बनाने की राज्य सरकार की प्रतिबद्धता को ध्यान में रखते हुए, सरकार के 5 प्रमुख विभागों की 10 छात्रवृत्ति योजनाओं को एक मंच के तहत लाकर एक केंद्रीकृत राज्य छात्रवृत्ति पोर्टल विकसित किया गया है। \n\n<font color='#ff4618'>\"हर-छात्रवृत्ति\"</font> पोर्टल सबसे प्रमुख छात्रवृत्ति पोर्टल में से एक के रूप में उभरा है जो आवेदन के तीन स्तरीय सत्यापन की पेशकश करता है। छात्र आवेदन पत्र को तीन स्तरों अर्थात संस्थान, विश्वविद्यालय / नोडल निकाय और प्रधान कार्यालय से सत्यापित किया गया और इस प्रकार आवेदक का पूर्ण प्रमाणीकरण सुनिश्चित किया गया। यह पोर्टल राज्य के प्रमुख कार्यक्रम यानी हरियाणा सरकार की <font color='#ff4618'>\"परिवार पहचान पत्र (पीपीपी)\"</font> योजना के साथ भी एकीकृत है। राज्य सरकार की छात्रवृत्ति योजनाओं का लाभ उठाने के लिए प्रत्येक आवेदक के पास परिवार पहचान पत्र (पीपीपी) होना अनिवार्य है। हर-छात्रवृत्ति पोर्टल में <font color='#ff4618'>\"हरियाणा से बाहर पढ़ने वाले छात्र\"</font> भी शामिल होंगे। ऐसे आवेदन का सीधे संबंधित विभाग द्वारा सत्यापन किया जाएगा।  "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address"><u> ADDRESS </u>\n\n Office of Director General,\n Higher Education Haryana Sector 5,\n Panchkula - INDIA\n</string>
    <string name="contact"><u> CONTACT INFO </u>\n\n <u>&amp;#9743   Phone:-\n\n</u> +91 9888631114, 9646040255, 9646039936\n\n <u> Days &amp; Timing:- </u>\n\nMon-Fri (09:00 A.M to 05:00 P.M)\n\n\n <u>&#64; &#9993;  Email:- </u>\n\n helpdeskscholarshiphry[at]gmail[dot]com
</string>
    <string name="login_signup"><u> Login \n/\n Signup </u></string>
    <string name="home">Home</string>

    <string name="password">Password</string>
    <string name="sentOtp">Sent Otp</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_passwordd">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="loginStudent">Student Login</string>
    <string name="reg_Mobile">Registered Mobile Number</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="registration">Registration</string>
    <string name="skip"><u> Skip </u></string>
    <string name="send">Send</string>
    <string name="designdevelopeby">Mobile App Designed &amp; Developed By : HSVP IT Wing.</string>
    <string name="tercondition"><![CDATA[1. In case it is found at any stage that Parivar Pehchaan Patra and Aadhaar number provided by you is wrong or not yours, the application is liable to be rejected.\n\n 2. As per the Item 35 of Chapter VII of Aadhaar (Targeted delivery of financial and other subsidies, benefits and services) ACT, 2016, if a person enter Aadhaar number of any other person and attempt to impersonate another person, dead or alive, real or imaginary, he/she shall be punishable with imprisonment for a term which may extend to three years and shall also be liable to a fine which may extend to ten thousand rupees. \n\n3. In case you do not have Aadhaar, you are requested to apply for Aadhaar enrolment at any Aadhaar enrolment centre at the earliest and revisit the portal with your e-Aadhaar details. \n\n4. Before proceeding to the next step, properly check your Name, DOB and Gender auto-filled by the portal. \n\n5. If the name is not yours then recheck your Parivar Pehchaan Patra details filled by you. \n\n6. If the spelling of your Name/ DOB/ Gender/ Caste/ Family Income/ BPL is wrong, then visit the nearest Parivar Pehchaan Patra Enrolment Centre to correct the details and re-visit the portal. \n\n7. If more than one application is found to be made on-line, your applications are liable to be rejected. \n\n8. If there is any wrong entry or mis-match of the Aadhar linked Bank-account details, the State Government will not be responsible for mis-credit. \n\n9. Password length should not be less than 8 and not more than 20 characters. \n\n10. Password must contain at least one digit [0-9], one upper case [A-Z], one lower case letter [a-z] and one special character such as [@#&*$!]. \n\n11. Please avoid choosing a password that is generic in nature, guessable or inferable.]]></string>
    <string name="contactus">contact us</string>
    <string name="colleges">Colleges</string>
    <string name="Profile">Profile</string>
    <string name="Eligibility">Eligibility</string>
    <string name="HowtoApply">HowApply</string>
    <string name="LatestUpdates">Latest Updates</string>
    <string name="Notification">Notification</string>
    <string name="departmentDashboard">Department \nDashboard</string>
    <string name="masteradminDashboard">Master Admin \nDashboard</string>
    <string name="Dashboard">Dashboard</string>
    <string name="ownerdetail">Owner Detail</string>
    <string name="currentoutstanding">Current Outstanding</string>
    <string name="outstanding">Outstanding</string>
    <string name="futureoutstanding">Future Outstanding</string>
    <string name="paymentmade">Payment Made</string>
    <string name="alloteeaccountstatement">Allotee Account Statement</string>
    <string name="AlloteeNotice">Allotee Notice</string>
    <string name="AlloteeHistory">Allotee History</string>
    <string name="applyscholarship">Apply \n Scholarship</string>
    <string name="apply">Apply</string>
    <string name="use_this_url_for_apply_your_scholarship">Use this url for apply your scholarship- \n  https://harchhatravratti.highereduhry.ac.in/UserLogin</string>
    <string name="eligibilitytermcondition">1.  Student Can apply only in One Scheme except in Haryana State Meritorious Incentives Scheme.</string>
    <string name="eligibility2">2. Please Check the <u> <font color='blue'> Scheme Eligibility</font> </u> here before proceeding.</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>


    <string name="make_sure_reloading_page">Make sure you have good internet in your Mobile.Reload page again.</string>
    <string name="oops_there_is_no_interenet">Oops!! There is no internet connection. Please enable your internet connection.</string>
</resources>