<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
  <!--  <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_checklist_rtl_24"
        android:title="@string/Eligibility"/>-->
 <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_college"
        android:title="@string/currentoutstanding"/>


  <!--  <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/Notification"/>-->
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/Profile"/>
</menu>