<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.WelcomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView

                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <androidx.appcompat.widget.AppCompatTextView

                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/department_of_higher_education_haryana_the_officialapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.appcompat.widget.AppCompatButton
                android:visibility="invisible"
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edtbg"
                android:gravity="center"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edtbg"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatButton
                android:visibility="invisible"
                android:id="@+id/btnAppStatus"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edtbg"
                android:gravity="center"
                android:text=" Check Application Status"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />



            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:contentDescription="TODO"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/bottom" />
            <TextView
                android:id="@+id/TxtuserName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/designdevelopeby"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/purple_700" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>