<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="52dp"
                android:layout_marginBottom="65dp"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toTopOf="@+id/llll"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:ignore="VectorDrawableCompat,ImageContrastCheck" />



            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/black"
                android:visibility="visible"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryDark"
                app:shapeAppearance="@style/Rounded"
                android:id="@+id/llll"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="16dp"
                    android:hint="User Name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kkkk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/black"
                android:visibility="visible"
                app:boxStrokeColor="@color/purple_700"
                app:shapeAppearance="@style/Rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llll"
                app:endIconMode="password_toggle"
                android:background="@color/white"
                app:passwordToggleTint="@color/purple_700"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/black"
                    android:id="@+id/EdtUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:id="@+id/txtforget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:text="@string/forgot_passwordd"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="@+id/kkkk"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="@+id/kkkk"
                app:layout_constraintTop_toBottomOf="@+id/kkkk" />


            <androidx.appcompat.widget.AppCompatTextView

                android:id="@+id/BtnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"

                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/edtbg"
                android:gravity="center"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView9"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtforget" />

            <TextView
                android:visibility="invisible"
                android:id="@+id/TxtRegisterUser"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/create_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.441"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:visibility="invisible"
                android:id="@+id/btnskip"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/blue" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


